<resources>
    <string name="app_name">SwipifyApp</string>

    <!-- TÍTULOS -->
    <string name="loginTitle">Iniciar sesión</string>
    <string name="registerTitle">Regístrate</string>
    <string name="playlistsTitle">Tus listas</string>
    <!-- BOTONES -->
    <string name="usuarioHint">Usuario</string>
    <string name="contraseñaHint">Contraseña</string>
    <string name="nuevoUsuarioHint">Nuevo usuario</string>
    <string name="nuevaContraseñaHint">Nueva contraseña</string>
    <string name="nuevaContraseñaRepetirHint">Repetir nueva contraseña</string>
    <string name="loginButton">Iniciar sesión</string>
    <string name="registerButton">Registrar</string>
    <string name="crearListaNueva">Crear nueva lista</string>
    <string name="selectImage">Seleccionar portada</string>
    <!-- TEXTOS -->
    <string name="yaTienesCuenta">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="noTienesCuenta">¿No tienes una cuenta? Regístrate aquí.</string>
    <string name="passwordRequirements">La contraseña debe contener al menos una mayúscula, un carácter especial y un número</string>
    <string name="nirvana">Nirvana</string>
    <string name="nevermind">Nevermind</string>
    <string name="shapred_box">Shapred Box</string>
    <string name="nightclub">#Nightclub</string>
    <string name="lofi">#Lo-fi</string>
    <string name="urban">#Urban</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="songTitle1">Come as you are</string>
    <string name="songAuthor1">Nirvana</string>
    <string name="songTitle2">Save Your Tears</string>
    <string name="songAuthor2">The Weeknd</string>
    <string name="songTitle3">Levitating</string>
    <string name="songAuthor3">Dua Lipa</string>
    <string name="songTitle4">Neverita</string>
    <string name="songAuthor4">Bad Bunny</string>

</resources>